countdown.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: countdownbot
spec:
  selector:
    matchLabels:
      app: countdownbot
  template:
    metadata:
      labels:
        app: countdownbot
    spec:
      imagePullSecrets:
        - name: ecr-docker-login
      containers:
      - name: countdownbot
        image: 688621974378.dkr.ecr.eu-west-2.amazonaws.com/countdown-bot:ff087cb53d0bde1e7c499ff79000c40bfedc7dd3
        resources:
          limits:
            memory: "64Mi"
            cpu: "100m"
