addoncraft.yaml
apiVersion: v1
kind: Service
metadata:
  name: addoncraft-service
spec:
  selector:
    app: addoncraft
  ports:
  - port: 80
    targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: addoncraft
spec:
  selector:
    matchLabels:
      app: addoncraft
  template:
    metadata:
      labels:
        app: addoncraft
    spec:
      imagePullSecrets:
        - name: ecr-docker-login
      containers:
      - name: addoncraft
        image: 688621974378.dkr.ecr.eu-west-2.amazonaws.com/addoncraft:2af180b70fef6d51abf4df9b3f42a1ea43c2877f
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 3000
