http-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    name: http-ingress
spec:
  rules:
  - host: addoncraft.com
    http: &http_rules
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: addoncraft-service
            port: 
              number: 80
  - host: www.addoncraft.com
    http: *http_rules
  - host: www.ratemynugget.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ratemynugget-service
            port: 
              number: 80
